--- a/learn/projects/index.html
+++ b/learn/projects/index.html
@@ -152,7 +152,7 @@
 </li>
 
 <li>
-<p><a href='datetime.html'>Wicket Date/Time</a> -</p>
+<p><a href='datetime.html'>Wicket Date/Time</a> - date components</p>
 </li>
 
 <li>
