--- a/meet/features.html
+++ b/meet/features.html
@@ -144,7 +144,7 @@
 
 		<div id="contentbody">
 			<h1>Features</h1>
-			<h2 id='swinglike_oo_component_model'>Swing-like OO Component Model</h2>
+			<h2 id='pojo_component_model'>POJO Component Model</h2>
 
 <p>Pages and Components in Wicket are real Java objects that support encapsulation, inheritance and events.</p>
 
@@ -158,7 +158,7 @@
 
 <h2 id='secure'>Secure</h2>
 
-<p>Wicket is secure by default. URLs do not expose sensitive information and all component paths are session-relative. Explicit steps must be taken to share information between sessions. There are plans for the next version of Wicket to add URL encryption to support highly secure web sites.</p>
+<p>Wicket is secure by default. URLs do not expose sensitive information and all component paths are session-relative. Explicit steps must be taken to share information between sessions. Furthermore URL encryption allows highly secure web sites.</p>
 
 <h2 id='transparent_scalable_clustering_support'>Transparent, Scalable Clustering Support</h2>
 
