--- a/contribute/build.html
+++ b/contribute/build.html
@@ -162,18 +162,18 @@
 
 <h2 id='getting_your_wicket_version'>Getting your Wicket version</h2>
 
-<p>When you build from SVN you should check out the whole of trunk or the selected branch as the project consists of various modules that may depend on one another. For the current (1.4) development branch, you will need to check out:</p>
-<div class='highlight'><pre><code class='console'><span class='go'>svn co http://svn.apache.org/repos/asf/wicket/trunk</span>
+<p>When you build from SVN you should check out the whole of trunk or the selected branch as the project consists of various modules that may depend on one another. For the current (1.5) development branch, you will need to check out:</p>
+<div class='highlight'><pre><code class='console'><span class='go'>svn co http://svn.apache.org/repos/asf/wicket/trunk wicket</span>
 </code></pre>
 </div>
 <p>This will give you a directory structure like the following directory tree:</p>
-<div class='highlight'><pre><code class='console'><span class='go'>wicket-1.x</span>
-<span class='go'>wicket-1.x/wicket</span>
-<span class='go'>wicket-1.x/wicket-extensions</span>
-<span class='go'>wicket-1.x/wicket-spring</span>
-<span class='go'>wicket-1.x/wicket-auth-roles</span>
-<span class='go'>wicket-1.x/wicket-examples</span>
-<span class='go'>wicket-1.x/wicket-spring-annot</span>
+<div class='highlight'><pre><code class='console'><span class='go'>wicket</span>
+<span class='go'>wicket/wicket</span>
+<span class='go'>wicket/wicket-extensions</span>
+<span class='go'>wicket/wicket-spring</span>
+<span class='go'>wicket/wicket-auth-roles</span>
+<span class='go'>wicket/wicket-examples</span>
+<span class='go'>wicket/wicket-spring-annot</span>
 <span class='go'>...</span>
 </code></pre>
 </div>
@@ -181,15 +181,17 @@
 
 <p>The artifacts in this project are there only for having a consistent build. This top-level project doesn&#8217;t have sources for itself.</p>
 
-<h2 id='building_wicket_1x'>Building Wicket 1.x</h2>
+<h2 id='building_wicket'>Building Wicket</h2>
 
 <p>The current development version of Wicket requires at least jdk 1.5.</p>
-<div class='highlight'><pre><code class='console'><span class='go'>svn co http://svn.apache.org/repos/asf/wicket/trunk</span>
-</code></pre>
-</div>
+
 <p>If you want to ensure that your Wicket version is built using JDK-1.5 and fully compatible with that Java version, you will need to build it with a Java 1.5 compiler and runtime library.</p>
 
-<p>Building all of Wicket is as simple as issuing the following command in the root directory:</p>
+<p>If you haven&#8217;t done so already change into the Wicket root directory:</p>
+<div class='highlight'><pre><code class='console'><span class='go'>cd wicket</span>
+</code></pre>
+</div>
+<p>Now building all of Wicket is as simple as issuing the following command:</p>
 <div class='highlight'><pre><code class='console'><span class='go'>mvn install</span>
 </code></pre>
 </div>
@@ -220,7 +222,7 @@
 <div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
     <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
     <span class='nt'>&lt;artifactId&gt;</span>wicket<span class='nt'>&lt;/artifactId&gt;</span>
-    <span class='nt'>&lt;version&gt;</span>1.4-SNAPSHOT<span class='nt'>&lt;/version&gt;</span>
+    <span class='nt'>&lt;version&gt;</span>1.5-SNAPSHOT<span class='nt'>&lt;/version&gt;</span>
     <span class='nt'>&lt;scope&gt;</span>compile<span class='nt'>&lt;/scope&gt;</span>
 <span class='nt'>&lt;/dependency&gt;</span>
 </code></pre>
