--- a/contribute/write.html
+++ b/contribute/write.html
@@ -144,7 +144,7 @@
 
 		<div id="contentbody">
 			<h1>Write documentation</h1>
-			<p>We use <a href='http://github.com/mojombo/jekyll'>jekyll</a> for writing our documentation on our main website. Publishing new content is as simple as regenerating the site and committing the changed files.</p>
+			<p>We use <a href='http://github.com/mojombo/jekyll'>Jekyll</a> for writing our documentation on our main website. Publishing new content is as simple as regenerating the site and committing the changed files.</p>
 
 <h2 id='contents'>Contents</h2>
 
@@ -181,10 +181,10 @@
 <h2 id='run'>Run the site</h2>
 
 <p>You can run the website by starting jekyll in the checked out directory:</p>
-<div class='highlight'><pre><code class='console'><span class='go'>jekyll --server --auto</span>
+<div class='highlight'><pre><code class='console'><span class='go'>./regenerate.sh</span>
 </code></pre>
 </div>
-<p>This not only runs the server, but watches for modifications and regenerates any modified files.</p>
+<p>This not only runs the server, but watches for modifications and regenerates any modified files. Note that this script restores Subversion (<code>.svn</code>) subfolders inside <code>_site</code>, which are erased when Jekyll is generating the content.</p>
 
 <p>You can check out the website running at <a href='http://localhost:4000'>localhost, port 4000</a>.</p>
 
@@ -209,7 +209,7 @@
 
 <h3 id='menu'>Menu</h3>
 
-<p>If you want your page linked from every page, include the link in <code>\_includes/navigation.html</code>.</p>
+<p>If you want your page linked from every page, include the link in <code>_includes/navigation.html</code>.</p>
 
 <h3 id='blog_posts'>Blog posts</h3>
 
@@ -227,9 +227,9 @@
 <p>When you&#8217;re done with making your changes, please check the following:</p>
 
 <ul>
-<li>Do the modified files contain only those changes that you actually want to publish? (Use svn diff to check)</li>
+<li>Do the modified files contain only those changes that you actually want to publish? (Use <code>svn diff</code> to check)</li>
 
-<li>Did you restart jekyll to generate the site if you modified a global file (e.g. _config.yml)?</li>
+<li>Did you restart Jekyll to generate the site?</li>
 </ul>
 
 <p>If these things are OK, you can either <a href='patch.html'>generate a patch</a> when you&#8217;re not a committer, or just commit the changes. In the latter case, the modifications are pushed immediately to the site and are live within a minute.</p>
