--- a/help/email.html
+++ b/help/email.html
@@ -152,6 +152,8 @@
 <li>The <strong>users</strong> mailing list for developers working with Wicket&emdash;that would be if you&#8217;re using Wicket or are interested in using it</li>
 
 <li>The <strong>dev</strong> mailing list for talking about development of Wicket itself. If you doubt that your message belongs on this list, use the <strong>users</strong> list.</li>
+
+<li>There’s also a <strong>commits</strong> mailing list for following SVN commits and JIRA issues.</li>
 </ul>
 
 <h2 id='subscribing_and_unsubscribing'>Subscribing and unsubscribing</h2>
@@ -195,7 +197,7 @@
 </table>
 <h2 id='report_a_security_issue'>Report a security issue</h2>
 
-<p>There’s also a commits mailing list for following SVN commits and JIRA issues. If you have a security issue to report, contact the <a href='mailto:private@wicket.apache.org?Security'>Wicket PMC</a>.</p>
+<p>If you have a security issue to report, please contact the <a href='mailto:private@wicket.apache.org?Security'>Wicket PMC</a>.</p>
 		</div>
         <div id="clearer"></div>
 		<div id="footer"><span>
