--- a/learn/examples/ajaxcounter.html
+++ b/learn/examples/ajaxcounter.html
@@ -156,9 +156,10 @@
 <div class='highlight'><pre><code class='html'><span class='nt'>&lt;html&gt;</span>
 <span class='nt'>&lt;head&gt;&lt;/head&gt;</span>
 <span class='nt'>&lt;body&gt;</span>
-<span class='nt'>&lt;a</span> <span class='na'>href=</span><span class='s'>&quot;#&quot;</span> <span class='na'>wicket:id=</span><span class='s'>&quot;link&quot;</span><span class='nt'>&gt;</span>click me<span class='nt'>&lt;/a&gt;</span>
-<span class='nt'>&lt;p&gt;</span>
-Counter: <span class='nt'>&lt;span</span> <span class='na'>wicket:id=</span><span class='s'>&quot;counter&quot;</span><span class='nt'>&gt;</span>nr of times<span class='nt'>&lt;/span&gt;</span>
+    <span class='nt'>&lt;a</span> <span class='na'>href=</span><span class='s'>&quot;#&quot;</span> <span class='na'>wicket:id=</span><span class='s'>&quot;link&quot;</span><span class='nt'>&gt;</span>click me<span class='nt'>&lt;/a&gt;</span>
+    <span class='nt'>&lt;p&gt;</span>
+        Counter: <span class='nt'>&lt;span</span> <span class='na'>wicket:id=</span><span class='s'>&quot;counter&quot;</span><span class='nt'>&gt;</span>nr of times<span class='nt'>&lt;/span&gt;</span>
+    <span class='nt'>&lt;/p&gt;</span>
 <span class='nt'>&lt;/body&gt;</span>
 <span class='nt'>&lt;/html&gt;</span>
 </code></pre>
@@ -173,11 +174,11 @@ Counter: <span class='nt'>&lt;span</span> <span class='na'>wicket:id=</span><spa
 
 <span class='kd'>public</span> <span class='kd'>class</span> <span class='nc'>Index</span> <span class='kd'>extends</span> <span class='n'>QuickStartPage</span> <span class='o'>{</span>
     <span class='kd'>public</span> <span class='nf'>Index</span><span class='o'>()</span> <span class='o'>{</span>
-        <span class='n'>Model</span> <span class='n'>model</span> <span class='o'>=</span> <span class='k'>new</span> <span class='n'>Model</span><span class='o'>()</span> <span class='o'>{</span>
+        <span class='n'>Model</span><span class='o'>&lt;</span><span class='n'>Integer</span><span class='o'>&gt;</span> <span class='n'>model</span> <span class='o'>=</span> <span class='k'>new</span> <span class='n'>Model</span><span class='o'>&lt;</span><span class='n'>Integer</span><span class='o'>&gt;()</span> <span class='o'>{</span>
             <span class='kd'>private</span> <span class='kt'>int</span> <span class='n'>counter</span> <span class='o'>=</span> <span class='mi'>0</span><span class='o'>;</span>
 
-            <span class='kd'>public</span> <span class='n'>Object</span> <span class='nf'>getObject</span><span class='o'>()</span> <span class='o'>{</span>
-                <span class='k'>return</span> <span class='k'>new</span> <span class='nf'>Integer</span><span class='o'>(</span><span class='n'>counter</span><span class='o'>++);</span>
+            <span class='kd'>public</span> <span class='n'>Integer</span> <span class='nf'>getObject</span><span class='o'>()</span> <span class='o'>{</span>
+                <span class='k'>return</span> <span class='n'>counter</span><span class='o'>++;</span>
             <span class='o'>}</span>
         <span class='o'>};</span>
         <span class='n'>add</span><span class='o'>(</span><span class='k'>new</span> <span class='n'>Link</span><span class='o'>(</span><span class='s'>&quot;link&quot;</span><span class='o'>)</span> <span class='o'>{</span>
@@ -185,7 +186,7 @@ Counter: <span class='nt'>&lt;span</span> <span class='na'>wicket:id=</span><spa
                 <span class='c1'>// do nothing.</span>
             <span class='o'>}</span>
         <span class='o'>});</span>
-        <span class='n'>add</span><span class='o'>(</span><span class='k'>new</span> <span class='n'>Label</span><span class='o'>(</span><span class='s'>&quot;counter&quot;</span><span class='o'>,</span> <span class='n'>model</span><span class='o'>));</span>
+        <span class='n'>add</span><span class='o'>(</span><span class='k'>new</span> <span class='n'>Label</span><span class='o'>&lt;</span><span class='n'>Integer</span><span class='o'>&gt;(</span><span class='s'>&quot;counter&quot;</span><span class='o'>,</span> <span class='n'>model</span><span class='o'>));</span>
     <span class='o'>}</span>
 <span class='o'>}</span>
 </code></pre>
@@ -209,11 +210,11 @@ Counter: <span class='nt'>&lt;span</span> <span class='na'>wicket:id=</span><spa
 
 <span class='kd'>public</span> <span class='kd'>class</span> <span class='nc'>Index</span> <span class='kd'>extends</span> <span class='n'>QuickStartPage</span> <span class='o'>{</span>
     <span class='kd'>public</span> <span class='nf'>Index</span><span class='o'>()</span> <span class='o'>{</span>
-        <span class='n'>Model</span> <span class='n'>model</span> <span class='o'>=</span> <span class='k'>new</span> <span class='n'>Model</span><span class='o'>()</span> <span class='o'>{</span>
+        <span class='n'>Model</span><span class='o'>&lt;</span><span class='n'>Integer</span><span class='o'>&gt;</span> <span class='n'>model</span> <span class='o'>=</span> <span class='k'>new</span> <span class='n'>Model</span><span class='o'>&lt;</span><span class='n'>Integer</span><span class='o'>&gt;()</span> <span class='o'>{</span>
             <span class='kd'>private</span> <span class='kt'>int</span> <span class='n'>counter</span> <span class='o'>=</span> <span class='mi'>0</span><span class='o'>;</span>
 
-            <span class='kd'>public</span> <span class='n'>Object</span> <span class='nf'>getObject</span><span class='o'>()</span> <span class='o'>{</span>
-                <span class='k'>return</span> <span class='k'>new</span> <span class='nf'>Integer</span><span class='o'>(</span><span class='n'>counter</span><span class='o'>++);</span>
+            <span class='kd'>public</span> <span class='n'>Integer</span> <span class='nf'>getObject</span><span class='o'>()</span> <span class='o'>{</span>
+                <span class='k'>return</span> <span class='n'>counter</span><span class='o'>++;</span>
             <span class='o'>}</span>
         <span class='o'>};</span>
         <span class='n'>add</span><span class='o'>(</span><span class='k'>new</span> <span class='n'>AjaxFallbackLink</span><span class='o'>(</span><span class='s'>&quot;link&quot;</span><span class='o'>)</span> <span class='o'>{</span>
@@ -222,12 +223,12 @@ Counter: <span class='nt'>&lt;span</span> <span class='na'>wicket:id=</span><spa
                 <span class='c1'>// the target</span>
             <span class='o'>}</span>
         <span class='o'>});</span>
-        <span class='n'>add</span><span class='o'>(</span><span class='k'>new</span> <span class='n'>Label</span><span class='o'>(</span><span class='s'>&quot;counter&quot;</span><span class='o'>,</span> <span class='n'>model</span><span class='o'>));</span>
+        <span class='n'>add</span><span class='o'>(</span><span class='k'>new</span> <span class='n'>Label</span><span class='o'>&lt;</span><span class='n'>Integer</span><span class='o'>&gt;(</span><span class='s'>&quot;counter&quot;</span><span class='o'>,</span> <span class='n'>model</span><span class='o'>));</span>
     <span class='o'>}</span>
 <span class='o'>}</span>
 </code></pre>
 </div>
-<p>As you can see, the Link has been replaced with the AjaxFallbackLink, and the onClick method now takes a new argument: the AjaxRequestTarget. If you want a component to be updated in the Ajax request, you&#8217;ll have to add them to the target. So let&#8217;s alter the file to make it possible to add the label to the request target.</p>
+<p>As you can see, the <code>Link</code> has been replaced with the <code>AjaxFallbackLink</code>, and the <code>onClick</code> method now takes a new argument: the <code>AjaxRequestTarget</code>. If you want a component to be updated in the Ajax request, you&#8217;ll have to add them to the target. So let&#8217;s alter the file to make it possible to add the label to the request target.</p>
 <div class='highlight'><pre><code class='java'><span class='kn'>package</span> <span class='n'>wicket</span><span class='o'>.</span><span class='na'>quickstart</span><span class='o'>;</span>
 
 <span class='kn'>import</span> <span class='nn'>wicket.Component</span><span class='o'>;</span>
@@ -238,19 +239,19 @@ Counter: <span class='nt'>&lt;span</span> <span class='na'>wicket:id=</span><spa
 
 <span class='kd'>public</span> <span class='kd'>class</span> <span class='nc'>Index</span> <span class='kd'>extends</span> <span class='n'>QuickStartPage</span> <span class='o'>{</span>
     <span class='kd'>public</span> <span class='nf'>Index</span><span class='o'>()</span> <span class='o'>{</span>
-        <span class='n'>Model</span> <span class='n'>model</span> <span class='o'>=</span> <span class='k'>new</span> <span class='n'>Model</span><span class='o'>()</span> <span class='o'>{</span>
+        <span class='n'>Model</span><span class='o'>&lt;</span><span class='n'>Integer</span><span class='o'>&gt;</span> <span class='n'>model</span> <span class='o'>=</span> <span class='k'>new</span> <span class='n'>Model</span><span class='o'>&lt;</span><span class='n'>Integer</span><span class='o'>&gt;()</span> <span class='o'>{</span>
             <span class='kd'>private</span> <span class='kt'>int</span> <span class='n'>counter</span> <span class='o'>=</span> <span class='mi'>0</span><span class='o'>;</span>
 
-            <span class='kd'>public</span> <span class='n'>Object</span> <span class='nf'>getObject</span><span class='o'>()</span> <span class='o'>{</span>
-                <span class='k'>return</span> <span class='k'>new</span> <span class='nf'>Integer</span><span class='o'>(</span><span class='n'>counter</span><span class='o'>++);</span>
+            <span class='kd'>public</span> <span class='n'>Integer</span> <span class='nf'>getObject</span><span class='o'>()</span> <span class='o'>{</span>
+                <span class='k'>return</span> <span class='n'>counter</span><span class='o'>++;</span>
             <span class='o'>}</span>
         <span class='o'>};</span>
-        <span class='kd'>final</span> <span class='n'>Label</span> <span class='n'>label</span> <span class='o'>=</span> <span class='k'>new</span> <span class='n'>Label</span><span class='o'>(</span><span class='s'>&quot;counter&quot;</span><span class='o'>,</span> <span class='n'>model</span><span class='o'>);</span>
+        <span class='kd'>final</span> <span class='n'>Label</span><span class='o'>&lt;</span><span class='n'>Integer</span><span class='o'>&gt;</span> <span class='n'>label</span> <span class='o'>=</span> <span class='k'>new</span> <span class='n'>Label</span><span class='o'>&lt;</span><span class='n'>Integer</span><span class='o'>&gt;(</span><span class='s'>&quot;counter&quot;</span><span class='o'>,</span> <span class='n'>model</span><span class='o'>);</span>
         <span class='n'>label</span><span class='o'>.</span><span class='na'>setOutputMarkupId</span><span class='o'>(</span><span class='kc'>true</span><span class='o'>);</span>
         <span class='n'>add</span><span class='o'>(</span><span class='k'>new</span> <span class='n'>AjaxFallbackLink</span><span class='o'>(</span><span class='s'>&quot;link&quot;</span><span class='o'>)</span> <span class='o'>{</span>
             <span class='kd'>public</span> <span class='kt'>void</span> <span class='nf'>onClick</span><span class='o'>(</span><span class='n'>AjaxRequestTarget</span> <span class='n'>target</span><span class='o'>)</span> <span class='o'>{</span>
                 <span class='k'>if</span> <span class='o'>(</span><span class='n'>target</span> <span class='o'>!=</span> <span class='kc'>null</span><span class='o'>)</span> <span class='o'>{</span>
-                    <span class='c1'>// target is only available in an ajax request</span>
+                    <span class='c1'>// target is only available in an Ajax request</span>
                     <span class='n'>target</span><span class='o'>.</span><span class='na'>addComponent</span><span class='o'>(</span><span class='n'>label</span><span class='o'>);</span>
                 <span class='o'>}</span>
             <span class='o'>}</span>
