--- a/learn/examples/dropdownchoice.html
+++ b/learn/examples/dropdownchoice.html
@@ -144,7 +144,7 @@
 
 		<div id="contentbody">
 			<h1>Using the DropDownChoice component</h1>
-			<p>One of the most problematic components for beginners of Wicket is the <code>DropDownChoice</code> component. In this example we will work the component to give a little more insight into its workings. This example requires that you have some understanding of the Wicket component model (nothing fancy though, but you might want to read the other examples first), and the Model concept used in Wicket (you can read more on models <a href='http://cwiki.apache.org/WICKET/working-with-wicket-models.html'>here</a>.</p>
+			<p>One of the most problematic components for beginners of Wicket is the <code>DropDownChoice</code> component. In this example we will work the component to give a little more insight into its workings. This example requires that you have some understanding of the Wicket component model (nothing fancy though, but you might want to read the other examples first), and the Model concept used in Wicket (you can read more on models <a href='http://cwiki.apache.org/WICKET/working-with-wicket-models.html'>here</a>).</p>
 
 <h2 id='the_example_domain'>The example domain</h2>
 
@@ -209,19 +209,19 @@
 <li>a select box for picking the manager.</li>
 </ul>
 
-<p>We will focus on the select box, because that will be our drop down choice. The <code>&lt;option&gt;</code> tags are there for preview, our component will replace them with the generated choices.</p>
+<p>We will focus on the select box, because that will be our <code>DropDownChoice</code>. The <code>&lt;option&gt;</code> tags are there for preview, our component will replace them with the generated choices.</p>
 
 <p>Let&#8217;s see how the page looks like from the Java side:</p>
 <div class='highlight'><pre><code class='java'><span class='kd'>public</span> <span class='kd'>class</span> <span class='nc'>AssignManagerPage</span> <span class='kd'>extends</span> <span class='n'>WebPage</span> <span class='o'>{</span>
     <span class='kd'>public</span> <span class='nf'>AssignManagerPage</span><span class='o'>(</span><span class='n'>Person</span> <span class='n'>employee</span><span class='o'>)</span> <span class='o'>{</span>
         <span class='n'>Form</span> <span class='n'>form</span> <span class='o'>=</span> <span class='k'>new</span> <span class='n'>Form</span><span class='o'>(</span><span class='s'>&quot;form&quot;</span><span class='o'>);</span>
         <span class='n'>add</span><span class='o'>(</span><span class='n'>form</span><span class='o'>);</span>
-        <span class='n'>form</span><span class='o'>.</span><span class='na'>add</span><span class='o'>(</span><span class='k'>new</span> <span class='n'>Label</span><span class='o'>(</span><span class='s'>&quot;name&quot;</span><span class='o'>,</span> <span class='k'>new</span> <span class='n'>PropertyModel</span><span class='o'>(</span><span class='n'>employee</span><span class='o'>,</span> <span class='s'>&quot;name&quot;</span><span class='o'>)));</span>
+        <span class='n'>form</span><span class='o'>.</span><span class='na'>add</span><span class='o'>(</span><span class='k'>new</span> <span class='n'>Label</span><span class='o'>(</span><span class='s'>&quot;name&quot;</span><span class='o'>,</span> <span class='k'>new</span> <span class='n'>PropertyModel</span><span class='o'>&lt;</span><span class='n'>String</span><span class='o'>&gt;(</span><span class='n'>employee</span><span class='o'>,</span> <span class='s'>&quot;name&quot;</span><span class='o'>)));</span>
 
-        <span class='n'>DropDownChoice</span> <span class='n'>ddc</span> <span class='o'>=</span> 
-            <span class='k'>new</span> <span class='nf'>DropDownChoice</span><span class='o'>(</span><span class='s'>&quot;name&quot;</span><span class='o'>,</span> 
-                    <span class='k'>new</span> <span class='nf'>PropertyModel</span><span class='o'>(</span><span class='n'>employee</span><span class='o'>,</span> <span class='s'>&quot;managedBy&quot;</span><span class='o'>),</span>
-                    <span class='k'>new</span> <span class='nf'>LoadableDetachableModel</span><span class='o'>()</span> <span class='o'>{</span>
+        <span class='n'>DropDownChoice</span><span class='o'>&lt;</span><span class='n'>Person</span><span class='o'>&gt;</span> <span class='n'>ddc</span> <span class='o'>=</span> 
+            <span class='k'>new</span> <span class='n'>DropDownChoice</span><span class='o'>&lt;</span><span class='n'>Person</span><span class='o'>&gt;(</span><span class='s'>&quot;name&quot;</span><span class='o'>,</span> 
+                    <span class='k'>new</span> <span class='n'>PropertyModel</span><span class='o'>&lt;</span><span class='n'>Person</span><span class='o'>&gt;(</span><span class='n'>employee</span><span class='o'>,</span> <span class='s'>&quot;managedBy&quot;</span><span class='o'>),</span>
+                    <span class='k'>new</span> <span class='n'>LoadableDetachableModel</span><span class='o'>&lt;</span><span class='n'>List</span><span class='o'>&lt;</span><span class='n'>Person</span><span class='o'>&gt;&gt;()</span> <span class='o'>{</span>
                         <span class='nd'>@Override</span>
                         <span class='kd'>protected</span> <span class='n'>Object</span> <span class='nf'>load</span><span class='o'>()</span> <span class='o'>{</span> 
                             <span class='k'>return</span> <span class='n'>Person</span><span class='o'>.</span><span class='na'>getManagers</span><span class='o'>();</span>
@@ -252,7 +252,7 @@
 <span class='nt'>&lt;/tr&gt;</span>
 </code></pre>
 </div>
-<p>As you can see from this markup is that Wicket added the items of the managers list and numbered the values of the options. These are the indexes of the items in the list. If the order of the list can change between requests, <em>or</em> if the list itself can change, then please use an <code>IChoiceRenderer</code>.</p>
+<p>As you can see from this markup is that Wicket added the items of the managers list and numbered the values of the options. These are the indices of the items in the list. If the order of the list can change between requests, <em>or</em> if the list itself can change, then please use an <code>IChoiceRenderer</code>.</p>
 
 <h2 id='selecting_a_choice'>Selecting a choice</h2>
 
