--- a/learn/examples/guestbook.html
+++ b/learn/examples/guestbook.html
@@ -204,6 +204,7 @@
 <div class='highlight'><pre><code class='java'><span class='kn'>package</span> <span class='n'>org</span><span class='o'>.</span><span class='na'>apache</span><span class='o'>.</span><span class='na'>wicket</span><span class='o'>.</span><span class='na'>examples</span><span class='o'>.</span><span class='na'>guestbook</span><span class='o'>;</span>
 
 <span class='kn'>import</span> <span class='nn'>java.util.ArrayList</span><span class='o'>;</span>
+<span class='kn'>import</span> <span class='nn'>java.util.Collections</span><span class='o'>;</span>
 <span class='kn'>import</span> <span class='nn'>java.util.Date</span><span class='o'>;</span>
 <span class='kn'>import</span> <span class='nn'>java.util.List</span><span class='o'>;</span>
 
@@ -222,7 +223,7 @@
 
 <span class='kd'>public</span> <span class='kd'>final</span> <span class='kd'>class</span> <span class='nc'>GuestBook</span> <span class='kd'>extends</span> <span class='n'>WicketExamplePage</span> <span class='o'>{</span>
     <span class='cm'>/** A global list of all comments from all users across all sessions */</span>
-    <span class='kd'>private</span> <span class='kd'>static</span> <span class='kd'>final</span> <span class='n'>List</span><span class='o'>&lt;</span><span class='n'>Comment</span><span class='o'>&gt;</span> <span class='n'>commentList</span> <span class='o'>=</span> <span class='k'>new</span> <span class='n'>ArrayList</span><span class='o'>&lt;</span><span class='n'>Comment</span><span class='o'>&gt;();</span>
+    <span class='kd'>private</span> <span class='kd'>static</span> <span class='kd'>final</span> <span class='n'>List</span><span class='o'>&lt;</span><span class='n'>Comment</span><span class='o'>&gt;</span> <span class='n'>commentList</span> <span class='o'>=</span> <span class='n'>Collections</span><span class='o'>.</span><span class='na'>synchronizedList</span><span class='o'>(</span><span class='k'>new</span> <span class='n'>ArrayList</span><span class='o'>&lt;</span><span class='n'>Comment</span><span class='o'>&gt;());</span>
 
     <span class='cm'>/**</span>
 <span class='cm'>     * Constructor that is invoked when page is invoked without a session.</span>
@@ -295,7 +296,7 @@
 </div>
 <p>When the <code>CommentForm</code> is submitted, the <code>onSubmit()</code> method is called. Notice that nothing gets the value of the <code>TextArea</code> that was added in the <code>CommentForm</code> constructor. This is because the comment is the model and the third parameter to the <code>TextArea</code> constructor specified the property of the model to update. So all <code>onSubmit()</code> has to do is create a new comment from the model that was updated and add it to the comment list. When the page redraws, the new list will be rendered.</p>
 
-<p>We use a <code>Vector</code> as our shared static model used by <code>commentListView</code> (<code>commentList</code>) to ensure that it is only updated by one thread at a time. Remember, this is a multi-user application with a shared model!</p>
+<p>We use a synchronized list as our shared static model used by <code>commentListView</code> (<code>commentList</code>) to ensure that it is only updated by one thread at a time. Remember, this is a multi-user application with a shared model!</p>
 
 <p>Finally, you may notice the call to <code>commentListView.modelChanged()</code>. This informs the list view that its model has been modified. In more advanced usage scenarios, this would allow Wicket to expire stale pages accessed with the browser&#8217;s back button.</p>
 
@@ -312,16 +313,16 @@
 <span class='nt'>&lt;body&gt;</span>
   <span class='nt'>&lt;span</span> <span class='na'>wicket:id=</span><span class='s'>&quot;mainNavigation&quot;</span><span class='nt'>/&gt;</span>
 
-  <span class='nt'>&lt;form</span> <span class='na'>wicket:id =</span><span class='err'> </span><span class='s'>&quot;commentForm&quot;</span> <span class='na'>id =</span><span class='err'> </span><span class='s'>&quot;commentForm&quot;</span><span class='nt'>&gt;</span>
+  <span class='nt'>&lt;form</span> <span class='na'>wicket:id=</span><span class='s'>&quot;commentForm&quot;</span><span class='nt'>&gt;</span>
     Add your comment here:
     <span class='nt'>&lt;p&gt;</span>
-    <span class='nt'>&lt;textarea</span> <span class='na'>wicket:id =</span><span class='err'> </span><span class='s'>&quot;text&quot;</span><span class='nt'>&gt;</span>This is a comment<span class='nt'>&lt;/textarea&gt;</span>
+    <span class='nt'>&lt;textarea</span> <span class='na'>wicket:id=</span><span class='s'>&quot;text&quot;</span><span class='nt'>&gt;</span>This is a comment<span class='nt'>&lt;/textarea&gt;</span>
     <span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&quot;text&quot;</span> <span class='na'>wicket:id=</span><span class='s'>&quot;comment&quot;</span> <span class='na'>class=</span><span class='s'>&quot;nospam&quot;</span> <span class='na'>onfocus=</span><span class='s'>&quot;getElementById(&#39;formsubmit&#39;).focus();&quot;</span><span class='nt'>/&gt;</span>
     <span class='nt'>&lt;p&gt;</span>
-    <span class='nt'>&lt;input</span> <span class='na'>type =</span><span class='err'> </span><span class='s'>&quot;submit&quot;</span> <span class='na'>value =</span><span class='err'> </span><span class='s'>&quot;Submit&quot;</span> <span class='na'>id=</span><span class='s'>&quot;formsubmit&quot;</span><span class='nt'>/&gt;</span>
+    <span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&quot;submit&quot;</span> <span class='na'>value=</span><span class='s'>&quot;Submit&quot;</span> <span class='na'>id=</span><span class='s'>&quot;formsubmit&quot;</span><span class='nt'>/&gt;</span>
   <span class='nt'>&lt;/form&gt;</span>
   <span class='nt'>&lt;p/&gt;</span>
-  <span class='nt'>&lt;span</span> <span class='na'>wicket:id =</span><span class='err'> </span><span class='s'>&quot;comments&quot;</span> <span class='na'>id=</span><span class='s'>&quot;comments&quot;</span><span class='nt'>&gt;</span>
+  <span class='nt'>&lt;span</span> <span class='na'>wicket:id=</span><span class='s'>&quot;comments&quot;</span><span class='nt'>&gt;</span>
     <span class='nt'>&lt;p&gt;</span>
         <span class='nt'>&lt;span</span> <span class='na'>wicket:id=</span><span class='s'>&quot;date&quot;</span><span class='nt'>&gt;</span>1/1/2004<span class='nt'>&lt;/span&gt;&lt;br&gt;</span>
         <span class='nt'>&lt;span</span> <span class='na'>wicket:id=</span><span class='s'>&quot;text&quot;</span><span class='nt'>&gt;</span>Comment text goes here.<span class='nt'>&lt;/span&gt;</span>
