--- a/index.html
+++ b/index.html
@@ -164,29 +164,37 @@
 
 <p>Wicket is released under the <a href='http://www.apache.org/licenses/LICENSE-2.0.html'>Apache License, Version 2.0</a>.</p>
 
+<h1 id='wicket_15rc7_released'><a href='/2011/08/28/1.5-RC7-released.html'>Wicket 1.5-RC7 released</a></h1>
+<p>The Wicket Team is proud to introduce the seventh Release Candidate in Wicket 1.5 series. See the changelog for the list of bug fixes and improvements done between 1.5-RC5.1 and 1.5-RC7</p><p>More detailed migration notes are available on our <a href='https://cwiki.apache.org/WICKET/migration-to-wicket-15.html'>Migrate to 1.5 Wiki Page</a></p><p>Release Artifacts:</p><ul>
+<li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.5-RC7'>Subversion tag</a></li>
+
+<li><a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310561&amp;version=12316657'>Changelog RC6</a></li>
+
+<li><a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310561&amp;version=12317645'>Changelog RC7</a></li>
+
+<li>To use in Maven:</li>
+</ul><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
+    <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
+    <span class='nt'>&lt;artifactId&gt;</span>wicket-core<span class='nt'>&lt;/artifactId&gt;</span>
+    <span class='nt'>&lt;version&gt;</span>1.5-RC7<span class='nt'>&lt;/version&gt;</span>
+<span class='nt'>&lt;/dependency&gt;</span>
+</code></pre>
+</div><ul>
+<li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5-RC7'>full distribution</a> (including source)</li>
+</ul>
 <h1 id='cve20112712__apache_wicket_xss_vulnerability'><a href='/2011/08/23/cve-2011-2712.html'>CVE-2011-2712 - Apache Wicket XSS vulnerability</a></h1>
 <p>Vendor: The Apache Software Foundation</p><p>Versions Affected: Apache Wicket 1.4.x</p><p>Apache Wicket 1.3.x and 1.5-RCx are not affected</p><p>Description: With multi window support application configuration and special query parameters it is possible to execute any kind of JavaScript on a site running with the affected versions.</p><p>Mitigation: Either disable multi window support with</p><p>MyApp.java</p><div class='highlight'><pre><code class='xml'>public void init() {
     super.init();
     getPageSettings.setAutomaticMultiWindowSupport(false);
 }
 </code></pre>
-</div><p>or upgrade to <a href='http://wicket.apache.org/2011/08/09/wicket-1.4.18-released.html'>Apache Wicket 1.4.18</a> or <a href='http://wicket.apache.org/2011/06/25/wicket-1.5-RC5.1-released.html'>Apache Wicket 1.5-RC5.1</a></p><p>Credit: This issue was discovered by ﻿Sven Krewitt of TÜV Rheinland i-sec GmbH.</p>
-<h1 id='wicket_1418_released'><a href='/2011/08/09/wicket-1.4.18-released.html'>Wicket 1.4.18 released</a></h1>
-<p>This is eightteenth release of the Wicket 1.4.x series. This is primarily a minor bugfix release on the 1.4.x (stable) branch.</p><ul>
-<li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.4.18'>Subversion tag</a></li>
+</div><p>or upgrade to <a href='http://wicket.apache.org/2011/08/09/wicket-1.4.18-released.html'>Apache Wicket 1.4.18</a> or <a href='http://wicket.apache.org/2011/06/25/wicket-1.5-RC5.1-released.html'>Apache Wicket 1.5-RC5.1</a></p><p>Credit: This issue was discovered by ﻿Sven Krewitt of TÜV Rheinland i-sec GmbH.</p><h1>Older news items</h1><ul>
 
-<li><a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310561&amp;version=12316329'>Changelog</a></li>
 
-<li>To use in Maven:</li>
-</ul><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
-    <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
-    <span class='nt'>&lt;artifactId&gt;</span>wicket<span class='nt'>&lt;/artifactId&gt;</span>
-    <span class='nt'>&lt;version&gt;</span>1.4.18<span class='nt'>&lt;/version&gt;</span>
-<span class='nt'>&lt;/dependency&gt;</span>
-</code></pre>
-</div><ul>
-<li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.4.18'>full distribution</a> (including source)</li>
-</ul><h1>Older news items</h1><ul>
+<li>
+	<a href='/2011/08/09/wicket-1.4.18-released.html'>Wicket 1.4.18 released</a> - <span>09 Aug 2011</span><br />
+	This is eightteenth release of the Wicket 1.4.x series. This is primarily a minor bugfix release on the 1.4.x (stable) branch. Subversion tag Changelog To...
+	<a href='/2011/08/09/wicket-1.4.18-released.html'>more</a></li>
 
 
 <li>
@@ -241,12 +249,6 @@
 	<a href='/2011/01/22/wicket-1.5-RC1-released.html'>Wicket 1.5-RC1 released</a> - <span>22 Jan 2011</span><br />
 	The Wicket Team is proud to introduce the first Release Candidate in Wicket 1.5 series. The 1.5 series provides the following major improvements: A more...
 	<a href='/2011/01/22/wicket-1.5-RC1-released.html'>more</a></li>
-
-
-<li>
-	<a href='/2010/12/24/wicket-1.4.15-released.html'>Wicket 1.4.15 released</a> - <span>24 Dec 2010</span><br />
-	This is fifteenth release of the Wicket 1.4.x series. This is primarily a minor bugfix release on the 1.4.x (stable) branch. Subversion tag Changelog To...
-	<a href='/2010/12/24/wicket-1.4.15-released.html'>more</a></li>
 
 </ul>
 <h1 id='books_about_wicket'>Books about Wicket</h1>
