Fix navomatic example - use Border.addToBorder()
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1196632 13f79535-47bb-0310-9956-ffa450edef68

--- a/learn/examples/navomatic.html
+++ b/learn/examples/navomatic.html
@@ -279,8 +279,8 @@
     <span class='kd'>public</span> <span class='nf'>NavomaticBorder</span><span class='o'>(</span><span class='kd'>final</span> <span class='n'>String</span> <span class='n'>componentName</span><span class='o'>)</span> <span class='o'>{</span>
         <span class='kd'>super</span><span class='o'>(</span><span class='n'>componentName</span><span class='o'>);</span>
 
-        <span class='n'>add</span><span class='o'>(</span><span class='k'>new</span> <span class='n'>BoxBorder</span><span class='o'>(</span><span class='s'>&quot;navigationBorder&quot;</span><span class='o'>));</span>
-        <span class='n'>add</span><span class='o'>(</span><span class='k'>new</span> <span class='n'>BoxBorder</span><span class='o'>(</span><span class='s'>&quot;bodyBorder&quot;</span><span class='o'>));</span>
+        <span class='n'>addToBorder</span><span class='o'>(</span><span class='k'>new</span> <span class='n'>BoxBorder</span><span class='o'>(</span><span class='s'>&quot;navigationBorder&quot;</span><span class='o'>));</span>
+        <span class='n'>addToBorder</span><span class='o'>(</span><span class='k'>new</span> <span class='n'>BoxBorder</span><span class='o'>(</span><span class='s'>&quot;bodyBorder&quot;</span><span class='o'>));</span>
     <span class='o'>}</span>
 <span class='o'>}</span>
 </code></pre>
