--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -201,6 +201,10 @@
 		<select id='version' onchange='changeIt();'>
 
 		
+			<option value='6.0-SNAPSHOT'>6.0-SNAPSHOT</option>
+		
+
+		
 			<option value='1.5-SNAPSHOT'>1.5-SNAPSHOT</option>
 		
 
