Update the links to Shiro and Wicket-Security
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1207464 13f79535-47bb-0310-9956-ffa450edef68

--- a/learn/projects/authroles.html
+++ b/learn/projects/authroles.html
@@ -217,9 +217,9 @@
 <p>More elaborate security solutions exist in the following projects:</p>
 
 <ul>
-<li><a href='http://wicketstuff.org/confluence/display/STUFFWIKI/wicket-shiro'>Wicket Shiro</a> - integration between Apache Shiro and Wicket</li>
+<li><a href='https://github.com/wicketstuff/core/tree/master/jdk-1.5-parent/shiro-security'>Wicket Shiro</a> - integration between Apache Shiro and Wicket</li>
 
-<li><a href='http://wicketstuff.org/confluence/display/STUFFWIKI/Wicket-Security'>Wicket Security</a> - JAAS inspired, principal based security framework</li>
+<li><a href='https://github.com/wicketstuff/core/tree/master/jdk-1.5-parent/wicket-security-parent'>Wicket Security</a> - JAAS inspired, principal based security framework</li>
 </ul>
 
 <p>If other security solutions are available for Wicket, <a href='https://issues.apache.org/jira/browse/WICKET'>let us know</a>.</p>
