Updated downloads page to reflect 6.0.x development
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1207546 13f79535-47bb-0310-9956-ffa450edef68

--- a/start/download.html
+++ b/start/download.html
@@ -194,7 +194,9 @@
 <p>If you wish to build the latest code from scratch, trunk and branches live in the following places in Subversion:</p>
 
 <ul>
-<li><strong>1.5.x</strong>: <a href='http://svn.apache.org/repos/asf/wicket/trunk'>http://svn.apache.org/repos/asf/wicket/trunk</a></li>
+<li><strong>6.0.x</strong>: <a href='http://svn.apache.org/repos/asf/wicket/trunk'>http://svn.apache.org/repos/asf/wicket/trunk</a></li>
+
+<li><strong>1.5.x</strong>: <a href='http://svn.apache.org/repos/asf/wicket/branches/wicket-1.5.x'>http://svn.apache.org/repos/asf/wicket/branches/wicket-1.5.x</a></li>
 
 <li><strong>1.4.x</strong>: <a href='http://svn.apache.org/repos/asf/wicket/branches/wicket-1.4.x'>http://svn.apache.org/repos/asf/wicket/branches/wicket-1.4.x</a></li>
 
