Apache Wicket 1.5.4 released
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1234701 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -173,6 +173,22 @@
 <h1>Security announcement: CVE-2011-2712</h1>
 <p>A XSS vulnerability has been found in Apache Wicket version 1.4. This is solved in Apache Wicket 1.4.18. Please upgrade your applications to this release. Wicket versions 1.3.x and 1.5.x are not affected by this vulnerability. <a href='2011/08/23/cve-2011-2712.html'>More information</a></p>
 
+<h1 id='wicket_154_released'><a href='/2012/01/23/wicket-1.5.4-released.html'>Wicket 1.5.4 released</a></h1>
+<p>This is the fourth maintenance release of the Wicket 1.5.x series. This release brings over 68 bug fixes and improvements.</p><ul>
+<li><a href='http://git-wip-us.apache.org/repos/asf/wicket/repo?p=wicket.git;a=shortlog;h=refs/tags/release/wicket-1.5.4'>Git tag</a></li>
+
+<li><a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310561&amp;version=12319051'>Changelog</a></li>
+
+<li>To use in Maven:</li>
+</ul><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
+    <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
+    <span class='nt'>&lt;artifactId&gt;</span>wicket-core<span class='nt'>&lt;/artifactId&gt;</span>
+    <span class='nt'>&lt;version&gt;</span>1.5.4<span class='nt'>&lt;/version&gt;</span>
+<span class='nt'>&lt;/dependency&gt;</span>
+</code></pre>
+</div><ul>
+<li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5.4'>full distribution</a> (including source)</li>
+</ul>
 <h1 id='wicket_153_released'><a href='/2011/11/14/wicket-1.5.3-released.html'>Wicket 1.5.3 released</a></h1>
 <p>This is the third maintenance release of the Wicket 1.5.x series. This release brings over 40 bug fixes and improvements.</p><ul>
 <li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.5.3'>Subversion tag</a></li>
@@ -188,23 +204,13 @@
 </code></pre>
 </div><ul>
 <li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5.3'>full distribution</a> (including source)</li>
-</ul>
-<h1 id='wicket_152_released'><a href='/2011/10/24/wicket-1.5.2-released.html'>Wicket 1.5.2 released</a></h1>
-<p>This is the second maintenance release of the Wicket 1.5.x series. This release brings over 25 bug fixes and 5 improvements.</p><ul>
-<li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.5.2'>Subversion tag</a></li>
-
-<li><a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310561&amp;version=12318078'>Changelog</a></li>
-
-<li>To use in Maven:</li>
-</ul><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
-    <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
-    <span class='nt'>&lt;artifactId&gt;</span>wicket-core<span class='nt'>&lt;/artifactId&gt;</span>
-    <span class='nt'>&lt;version&gt;</span>1.5.2<span class='nt'>&lt;/version&gt;</span>
-<span class='nt'>&lt;/dependency&gt;</span>
-</code></pre>
-</div><ul>
-<li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5.2'>full distribution</a> (including source)</li>
 </ul><h1>Older news items</h1><ul>
+
+
+<li>
+	<a href='/2011/10/24/wicket-1.5.2-released.html'>Wicket 1.5.2 released</a> - <span>24 Oct 2011</span><br />
+	This is the second maintenance release of the Wicket 1.5.x series. This release brings over 25 bug fixes and 5 improvements. Subversion tag Changelog To...
+	<a href='/2011/10/24/wicket-1.5.2-released.html'>more</a></li>
 
 
 <li>
@@ -259,12 +265,6 @@
 	<a href='/2011/05/11/wicket-1.5-RC4.2-released.html'>Wicket 1.5-RC4.2 released</a> - <span>11 May 2011</span><br />
 	The Wicket Team is proud to introduce the fourth Release Candidate in Wicket 1.5 series. See the changelog for the list of bug fixes and...
 	<a href='/2011/05/11/wicket-1.5-RC4.2-released.html'>more</a></li>
-
-
-<li>
-	<a href='/2011/04/02/wicket-1.5-RC3-released.html'>Wicket 1.5-RC3 released</a> - <span>02 Apr 2011</span><br />
-	The Wicket Team is proud to introduce the third Release Candidate in Wicket 1.5 series. See the changelog for the list of bug fixes and...
-	<a href='/2011/04/02/wicket-1.5-RC3-released.html'>more</a></li>
 
 </ul>
 <h1 id='books_about_wicket'>Books about Wicket</h1>
